kubernetes/infrastructure/observability/jaeger/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jaeger
  namespace: jaeger
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=jaeger-collector"
    gethomepage.dev/name: Jaeger
    gethomepage.dev/description: Distributed Tracing
    gethomepage.dev/group: Observability
    gethomepage.dev/icon: jaeger.png
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: gateway
      sectionName: https
  hostnames:
    - "jaeger.timourhomelab.org"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: jaeger-collector
          port: 16686
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: jaeger-basic-auth
  namespace: jaeger
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: jaeger
  basicAuth:
    users:
      name: jaeger-basic-auth
